--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- site metas -->
-   <title>Watch</title>
+   <title>MAIN-INDEX-WATCH</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -28,7 +28,8 @@
    <!-- owl stylesheets -->
    <link rel="stylesheet" href="css/owl.carousel.min.css">
    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+      media="screen">
 </head>
 
 <body>
@@ -76,21 +77,27 @@
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="container">
-                     <h1 class="banner_taital">Analog Watchs</h1>
+                     <h1 class="banner_taital">Analog Watchs <img style="border-radius: 50%; margin-top: -15px;"
+                           height="150px" width="130px" src="./app-image/analog-onepng.png" alt=""></h1>
+
+
                      <p class="banner_text"></p>
                      <div class="read_bt"><a href="#">Buy Now</a></div>
                   </div>
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="banner_taital">Digital Watchs</h1>
+                     <h1 class="banner_taital">Digital Watchs <img style="border-radius: 50%; margin-top: -15px;"
+                           height="150px" width="130px" src="./app-image/digital-one.png" alt=""></h1>
                      <p class="banner_text"></p>
                      <div class="read_bt"><a href="#">Buy Now</a></div>
                   </div>
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="banner_taital">Smart Watchs</h1>
+                     <h1 class="banner_taital">Smart Watchs <img style="border-radius: 50%; margin-top: -15px;"
+                           height="150px" width="130px" src="./app-image/samart-onepng.png" alt=""></h1>
+
                      <p class="banner_text"></p>
                      <div class="read_bt"><a href="#">Buy Now</a></div>
                   </div>
@@ -144,53 +151,28 @@
                </div>
             </div>
             <div class="watchs_section_2">
+
+            </div>
+            <div class="watchs_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_1"><img src="./app-image/digital.png" alt="Digital Watch"></div>
+                     <div class="image_1"><img src="./app-image/digital-one.png" alt="Analog Watch"></div>
                   </div>
                   <div class="col-md-6">
-                     <h4 class="uni_text">Digital Watch</h4>
+                     <h4 class="uni_text">Digiatl Watchs</h4>
                      <p class="watchs_text">A digital display shows the time as a number, e.g., 12:08 instead of a
                         shorthand pointing towards the number 12 and a long hand 8/60 of the way around the dial. The
-                        digits are usually shown as a seven-segment display.</p>
+                        digits are usually shown as a seven-segment display.
+
+                        The first digital mechanical pocket watches appeared in the late 19th century. In the 1920s, the
+                        first digital mechanical wristwatches appeared.</p>
                      <div class="read_bt1"> <a href="boootstrap.html"> See More </a> </div>
                   </div>
                </div>
             </div>
             <!-- watchs section end -->
             <!-- about section start -->
-            <div class="about_section layout_padding">
-               <div class="container">
-                  <h1 class="watchs_taital">Model</h1>
-                  <div class="about_section_2"> 
-               <div class="about_section_2">
 
-                  <div class="about_section_3">
-                     <div class="row">
-                        <div class="col-md-3">
-                           <div class="border_main">
-                              <div class="image_4"><img src="images/img-4.png"></div>
-                           </div>
-                        </div>
-                        <div class="col-md-3">
-                           <div class="border_main">
-                              <div class="image_4"><img src="images/img-5.png"></div>
-                           </div>
-                        </div>
-                        <div class="col-md-3">
-                           <div class="border_main">
-                              <div class="image_4"><img src="images/img-6.png"></div>
-                           </div>
-                        </div>
-                        <div class="col-md-3">
-                           <div class="border_main">
-                              <div class="image_4"><img src="images/img-7.png"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
             <!-- about section end -->
             <!-- testimonial section start -->
 
@@ -217,9 +199,9 @@
          <h3 class="follow_text">Follow Now</h3>
          <div class="social_icon">
             <ul>
-               <li><a href="https://www.facebook.com/people/Swami-Watch-Electronics/100069058565962/?sk=about&locale=fr_FR"><img src="images/fb-icon.png"></a></li>
-           
-               <li><a href=" https://www.instagram.com/explore/locations/363841180692413/swami-watch-electronics/ "><img src="images/instagram-icon.png"></a></li>
+               <li><a href=""><img src="images/fb-icon.png"></a></li>
+
+               <li><a href=""><img src="images/instagram-icon.png"></a></li>
             </ul>
          </div>
 
