--- a/watchs.html
+++ b/watchs.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Watchs</title>
+      <title>MAIN-INDEX-WATCH-TWO</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -107,7 +107,38 @@
                      </div>
                   </div>
                </div>
-               <div class="seemore_bt"><a href="#">See More</a></div>
+               <div class="about_section layout_padding">
+                  <div class="container">
+                     <h1 class="watchs_taital">Model</h1>
+                     <div class="about_section_2"> 
+                  <div class="about_section_2">
+   
+                     <div class="about_section_3">
+                        <div class="row">
+                           <div class="col-md-3">
+                              <div class="border_main">
+                                 <div class="image_4"><img src="images/img-4.png"></div>
+                              </div>
+                           </div>
+                           <div class="col-md-3">
+                              <div class="border_main">
+                                 <div class="image_4"><img src="images/img-5.png"></div>
+                              </div>
+                           </div>
+                           <div class="col-md-3">
+                              <div class="border_main">
+                                 <div class="image_4"><img src="images/img-6.png"></div>
+                              </div>
+                           </div>
+                           <div class="col-md-3">
+                              <div class="border_main">
+                                 <div class="image_4"><img src="images/img-7.png"></div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
          <!-- watchs section end -->
@@ -119,9 +150,9 @@
             <h3 class="follow_text">Follow Now</h3>
             <div class="social_icon">
                <ul>
-                  <li><a href="https://www.facebook.com/people/Swami-Watch-Electronics/100069058565962/?sk=about&locale=fr_FR"><img src="images/fb-icon.png"></a></li>
+                  <li><a href=""><img src="images/fb-icon.png"></a></li>
               
-                  <li><a href=" https://www.instagram.com/explore/locations/363841180692413/swami-watch-electronics/ "><img src="images/instagram-icon.png"></a></li>
+                  <li><a href=""><img src="images/instagram-icon.png"></a></li>
                </ul>
             </div>
            
