--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                   <div class="col-md-6 padding_right_0">
                      <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1401.396743228997!2d78.58398831545814!3d21.270137250762954!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4596265a9cd59%3A0x4b95d0484e4e58b6!2sPrakash%20Radio%20and%20Watch%20Center!5e1!3m2!1sen!2sin!4v1723026188283!5m2!1sen!2sin"
-                        width="370" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="570" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                   </div>
@@ -200,7 +200,7 @@
             <ul>
                <li><a href=""><img src="images/fb-icon.png"></a></li>
 
-               <li><a href=""><img src="images/instagram-icon.png"></a></li>
+               <li><a href="https://www.instagram.com/explore/locations/177530852932870/prakash-radio-and-watch/"><img src="images/instagram-icon.png"></a></li>
             </ul>
          </div>
          <div class="location_main">
