--- a/watchs.html
+++ b/watchs.html
@@ -152,7 +152,7 @@
                <ul>
                   <li><a href=""><img src="images/fb-icon.png"></a></li>
               
-                  <li><a href=""><img src="images/instagram-icon.png"></a></li>
+                  <li><a href="https://www.instagram.com/explore/locations/177530852932870/prakash-radio-and-watch/"><img src="images/instagram-icon.png"></a></li>
                </ul>
             </div>
            
