--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                <div class="carousel-item active">
                   <div class="container">
                      <h1 class="banner_taital">Analog Watchs <img style="border-radius: 50%; margin-top: -15px;"
-                           height="150px" width="130px" src="./app-image/analog-onepng.png" alt=""></h1>
+                           height="150px" width="130px" src="./onee.png " alt=""></h1>
 
 
                      <p class="banner_text"></p>
@@ -88,7 +88,7 @@
                <div class="carousel-item">
                   <div class="container">
                      <h1 class="banner_taital">Digital Watchs <img style="border-radius: 50%; margin-top: -15px;"
-                           height="150px" width="130px" src="./app-image/digital-one.png" alt=""></h1>
+                           height="150px" width="130px" src="./images/digital-one.png" alt=""></h1>
                      <p class="banner_text"></p>
                      <div class="read_bt"><a href="#">Buy Now</a></div>
                   </div>
@@ -96,7 +96,7 @@
                <div class="carousel-item">
                   <div class="container">
                      <h1 class="banner_taital">Smart Watchs <img style="border-radius: 50%; margin-top: -15px;"
-                           height="150px" width="130px" src="./app-image/samart-onepng.png" alt=""></h1>
+                           height="150px" width="130px" src="./images/samart-onepng.png" alt=""></h1>
 
                      <p class="banner_text"></p>
                      <div class="read_bt"><a href="#">Buy Now</a></div>
@@ -131,7 +131,7 @@
                         (typically) by the continuous motion of one, two, or three rotating pointers or hands pointing
                         to numbers arrayed on a circular dial the hour hand's movement being analogous to the path of
                         the sun across the sky.</p>
-                     <div class="read_bt1"> <a href="boootstrap.html"> See More </a> </div>
+                     <div class="read_bt1">  </div>
                   </div>
                </div>
             </div>
@@ -143,7 +143,7 @@
                         wristwatch. Most modern smartwatches are operated via a touchscreen, and are often reliant on
                         mobile apps that run on a connected device such as a smartphone to provide some core functions.
                      </p>
-                     <div class="read_bt1"> <a href="bootstrap.html"> See More </a> </div>
+                     <div class="read_bt1"> </div>
                   </div>
                   <div class="col-md-6">
                      <div class="image_2"><img src="images/img-2.png" alt="Smart Watch"></div>
@@ -156,7 +156,7 @@
             <div class="watchs_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_1"><img src="./app-image/digital-one.png" alt="Analog Watch"></div>
+                     <div class="image_1"><img src="./images/digital-one.png" alt="Analog Watch"></div>
                   </div>
                   <div class="col-md-6">
                      <h4 class="uni_text">Digiatl Watchs</h4>
@@ -166,7 +166,7 @@
 
                         The first digital mechanical pocket watches appeared in the late 19th century. In the 1920s, the
                         first digital mechanical wristwatches appeared.</p>
-                     <div class="read_bt1"> <a href="boootstrap.html"> See More </a> </div>
+                     <div class="read_bt1"> </div>
                   </div>
                </div>
             </div>
