--- a/watchs.html
+++ b/watchs.html
@@ -91,7 +91,7 @@
                         <h4 class="uni_text">ANALOG WATCHS</h4>
                         <p class="watchs_text">An analog watch is one in which the display is not digital, but is indicated (typically) by the continuous motion of one, two, or three rotating pointers or hands pointing to numbers arrayed on a circular dial the hour hand's movement being analogous to the path of the sun across the sky.</p>
                      
-                        <div class="read_bt1"><a href="./boootstrap.html">Buy Now</a></div>
+                        <div class="read_bt1"><a href="./shop.html">Buy Now</a></div>
                      </div>
                   </div>
                </div>
@@ -100,7 +100,7 @@
                      <div class="col-md-6">
                         <h4 class="uni_text">SMART WATCH</h4>
                         <p class="watchs_text">A smartwatch is a portable wearable computer device in the form of a wristwatch. Most modern smartwatches are operated via a touchscreen, and are often reliant on mobile apps that run on a connected device such as a smartphone to provide some core functions.</p>
-                        <div class="read_bt1"><a href="./bootstrap.html">Buy Now</a></div>
+                        <div class="read_bt1"><a href="shop_s.html">Buy Now</a></div>
                      </div>
                      <div class="col-md-6">
                         <div class="image_2"><img src="images/img-2.png"></div>
