--- a/about.html
+++ b/about.html
@@ -2,187 +2,196 @@
 <html lang="en">
 
 <head>
-   <style>
-table, th, td {
-  border: 1px solid black;
-  background-color: beige;
-  height: 60px;
-  width: 900px;
+    <style>
+        /* ABOUT SECTION */
 
-}
-   </style>
-   <!-- basic -->
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <!-- mobile metas -->
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-   <!-- site metas -->
-   <title> MAIN-INDEX-ABOUT</title>
-   <meta name="keywords" content="">
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <!-- bootstrap css -->
-   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-   <!-- style css -->
-   <link rel="stylesheet" type="text/css" href="css/style.css">
-   <!-- Responsive-->
-   <link rel="stylesheet" href="css/responsive.css">
-   <!-- fevicon -->
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
-   <!-- Scrollbar Custom CSS -->
-   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-   <!-- Tweaks for older IEs-->
-   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   <!-- fonts -->
-   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-   <!-- owl stylesheets -->
-   <link rel="stylesheet" href="css/owl.carousel.min.css">
-   <link rel="stylesheet" href="css/owl.theme.default.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
-      media="screen">
+        .alias {cursor: alias;}
+
+        .about-me .content h3 {
+            font-weight: 700;
+            font-size: 26px;
+            color: #18d26e;
+        }
+
+        .about-me .content ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .about-me .content ul li {
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+        }
+
+        .about-me .content ul strong {
+            margin-right: 10px;
+        }
+
+        .about-me .content ul i {
+            font-size: 16px;
+            margin-right: 5px;
+            color: #18d26e;
+            line-height: 0;
+        }
+
+        .about-me .content p:last-child {
+            margin-bottom: 0;
+        }
+
+
+
+
+        .section-title h2 {
+            font-size: 14px;
+            font-weight: 500;
+            padding: 0;
+            line-height: 1px;
+            margin: 0 0 20px 0;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            color: #aaaaaa;
+            font-family: "Poppins", sans-serif;
+        }
+
+        .section-title h2::after {
+            content: "";
+            width: 120px;
+            height: 1px;
+            display: inline-block;
+            background: #4ceb95;
+            margin: 4px 10px;
+        }
+
+        p {
+            margin: 0;
+            margin: -15px 0 15px 0;
+            font-size: 36px;
+            font-weight: 700;
+            text-transform: uppercase;
+            font-family: "Poppins", sans-serif;
+            color: #eeeedd;
+        }
+
+        .about {
+            background-color: #312c2c;
+            width: 1100px;
+            border-style: solid;
+            margin: 100px;
+            border-color: #55b9b9;
+        }
+
+        strong {
+            color: beige;
+            margin: 4px;
+        }
+
+        span {
+            color: #66a885;
+        }
+
+        .home {
+            color: #ffffff;
+            margin-left: 0px;
+            font-size: 20px;
+            text-decoration: none;
+        }
+
+        /* For mobile phones: */
+    </style>
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+
 </head>
 
-<body>
-   <!-- header section start -->
-   <div class="header_section">
-      <div class="header_main">
-         <div class="mobile_menu">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                     <li class="nav-item active">
-                        <a class="nav-link" href="about.html">About</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="watchs.html">Watchs</a>
-                     </li>
+<body style="background-color: #181717;">
 
-                     <li class="nav-item">
-                        <a class="nav-link " href="contact.html">Contact</a>
-                     </li>
+    <!-- main two -->
 
-                  </ul>
-               </div>
-            </nav>
-         </div>
-         <div class="container-fluid">
-            <div class="menu_main">
-               <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="about.html">About</a></li>
-                  <li><a href="watchs.html">Watchs</a></li>
 
-                  <li><a href="contact.html">Contact us</a></li>
-               </ul>
+    <!-- main one -->
+    <a class="home alias" href="./index.html">HOME</a>
+    <section id="about" class="about">
+
+        <!-- ======= About Me ======= -->
+        <div class="about-me container">
+
+            <div class="section-title">
+
+                <p>Learn more about me </p>
+
             </div>
-         </div>
-      </div>
-   </div>
-   <!-- header section end -->
-   <!-- background bg start -->
-   <div class="background_bg">
-      <!-- about section start -->
-      <div class="about_section layout_padding">
-         <div class="container">
-            <h1 class="watchs_taital"><br>About Shop</h1>
-            <div class="about_section_2">
-               <div class="row">
-                  <div class="col-md-6">
-                     <p class="about_text">
-                        About
-                        Prakash Radio And Watch Dealer is a 16 years 4 months old Proprietorship Firm incorporated on
-                        02-Apr-2008, having its registered office located at Room No 03, Shopping Center Nehru Bazar,
-                        Main Road, Katol, Maharashtra. <br> <br>
-                        The major activity of Prakash Radio And Watch Dealer is Trading For Availing Benefits Of
-                        Priority Sector Lending Psl Only , Sub-classified into Retail trade except of motor vehicles and
-                        motorcycles and is primarily engaged in the Retail sale of refrigerators washing machines and
-                        other electrical electronic household goods. <br> <br>
-                        Prakash Radio And Watch Dealer is classified as Micro enterprise in the financial year 2023-24.
-                        It has its unit situated at Katol, Maharashtra..</p>
 
-                  </div>
+            <div class="row">
+                <div class="col-lg-4" data-aos="fade-right">
+                    <img style=" border-style: solid; margin: 10px;" height="200px" width="200px"
+                        src="./Home-image/lucky.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                    <h3> FULL STACK DEVELOPER</h3>
+                    <br>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 / Seb /
+                                        2007</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                                    <span>nakadelucky8@gmail.com</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Skype ID:</strong> <span>Lucky
+                                        Nakade</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Phone number:</strong>
+                                    <span>9226784527</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Katol</span></li>
 
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong><span>16</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>11 Pass</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong> My favorite  subject is
+                                        :</strong><span>Physics</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>My hobbies:</strong> <span>Lisinig
+                                        song</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong> My favorite movie:</strong> <span>12th
+                                        Fail</span></li>
+                            </ul>
+                        </div>
+                    </div>
 
-
-             
-                  <div class="col-md-6">
-                     <div class="image_2"><img src="https://content3.jdmagicbox.com/comp/bhusawal/d9/9999p2582.2582.190531162902.b4d9/catalogue/prakash-watch-company-athawade-bazar-bhusawal-wrist-watch-dealers-fastrack-j60fkr5l95.jpg"></div>
-                  </div>
-               </div>
+                </div>
             </div>
-            <div class="about_section_3">
-               <div class="row">
-                  <div class="col-md-3">
-                     <div class="border_main">
-                        <div class="image_4"><img src="https://content3.jdmagicbox.com/comp/nagpur/t1/0712px712.x712.170920233445.x5t1/catalogue/prakash-watch-center-nagpur-0taglxedtf.jpg"></div>
-                     </div>
-                  </div>
-                  <div class="col-md-3">
-                     <div class="border_main">
-                        <div class="image_4"><img src="https://lh3.googleusercontent.com/SYjF5kHFLNvzq1Mht02APkqZGd_QR8ol1cB4LKS7aEI4QdI6L2IYK1gLnNVOWCkbpixLfz7vxR2SiXR3Hn2rju5l95-R=w192-rw"></div>
-                     </div>
-                  </div>
-                  <div class="col-md-3">
-                     <div class="border_main">
-                        <div class="image_4"><img src="https://content3.jdmagicbox.com/comp/nagpur/t1/0712px712.x712.170920233445.x5t1/catalogue/prakash-watch-center-nagpur-0cv0qwgnz5.jpg"></div>
-                     </div>
-                  </div>
-                  <div class="col-md-3">
-                     <div class="border_main">
-                        <div class="image_4"><img src="https://content3.jdmagicbox.com/comp/vidisha/e4/9999p7592.7592.160105110648.r7e4/catalogue/prakash-radio-s-vidisha-wrist-watch-dealers-jc7ajzbcmj.jpg"></div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
+
+        </div><!-- End About Me -->
 
 
 
-         </table>
-      <!-- about section end -->
-   </div>
-   <!-- background bg end -->
-   <!-- footer section start -->
-   <div style="background-color: rgb(255, 81, 0);" class="footer_section layout_padding">
-      <div class="container">
-         <h3 class="follow_text">Follow Now</h3>
-         <div class="social_icon">
-            <ul>
-               <li><a href="#"><img src="images/fb-icon.png"></a></li>
-               <li><a href="https://www.instagram.com/explore/locations/177530852932870/prakash-radio-and-watch/"><img src="images/instagram-icon.png"></a></li>
-            </ul>
-         </div>
+        <div class="swiper-pagination"></div>
+        </div>
 
-      </div>
-   </div>
-   <!-- footer section end -->
-   <!-- copyright section start -->
-   <div class="copyright_section">
+        <div class="owl-carousel testimonials-carousel">
 
-   </div>
-   <!-- copyright section end -->
-   <!-- Javascript files-->
-   <script src="js/jquery.min.js"></script>
-   <script src="js/popper.min.js"></script>
-   <script src="js/bootstrap.bundle.min.js"></script>
-   <script src="js/jquery-3.0.0.min.js"></script>
-   <script src="js/plugin.js"></script>
-   <!-- sidebar -->
-   <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-   <script src="js/custom.js"></script>
-   <!-- javascript -->
-   <script src="js/owl.carousel.js"></script>
-   <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+        </div>
+
+        </div><!-- End Testimonials  -->
+        <!-- Vendor JS Files -->
+        <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+        <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+
+        <!-- Template Main JS File -->
+        <script src="assets/js/main.js"></script>
+
+    </section><!-- End About Section -->
 </body>
 
 </html>
