--- a/contact.html
+++ b/contact.html
@@ -2,226 +2,175 @@
 <html lang="en">
 
 <head>
-   <style>
-      iframe {
-         border-radius: 10%;
+  <title>CONTACT SECTION</title>
+
+  <style>
+    /* MAIN  */
+    .main-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      background-color: rgb(0, 0, 0);
+      gap: 20px;
+      padding: 10px;
+      height: 200px;
+      width: 1000px;
+      margin-left: 180px;
+    }
+
+    /* DIV ONE */
+
+    .div-one {
+      width: 450px;
+      margin-top: 50px;
+      height: 130px;
+      background-color: rgb(30, 28, 28);
+    }
+
+    /* DIV TWO */
+    .div-two {
+      width: 500px;
+      height: 130px;
+      margin-top: 50px;
+      background-color: rgb(30, 28, 28);
+    }
+
+    /* BODY  */
+
+    body {
+      background-color: rgb(37, 37, 37);
+    }
+
+    /* H1 */
+
+    h1 {
+      color: white;
+      font-size: 20px;
+      text-align: center;
+      margin-top: 25px;
+      font-family: "Poppins", sans-serif;
+    }
+
+    /* H2 */
+
+    h2 {
+      color: rgb(82, 201, 92);
+      font-size: 20px;
+      margin-left: 5%;
+      font-family: "Poppins", sans-serif;
+    }
+
+    /* TWITTER */
+
+    .twitter {
+      color: azure;
+      text-decoration: none;
+      font-size: 20px;
+      font-family: "Poppins", sans-serif;
+
+      margin: 30px;
+      margin-top: 30;
+    }
+
+    /* HOME */
+    .home {
+      color: #fff;
+      margin-left: 180px;
+      font-size: 20px;
+      text-decoration: none;
+    }
+
+    .About {
+      margin-left: 40px;
+      text-decoration: none;
+      color: azure;
+      font-size: 20px;
+      margin: 30px;
+    }
+
+    /* MEDIA */
+    @media (max-width: 768px) {
+      .main-container {
+        flex-direction: column;
+        width: auto;
+        margin-left: 0;
+        height: auto;
       }
 
-      table,
-      th,
-      td {
-         border: 1px solid black;
-         width: 10vw;
-      border-color: white;
+      .div-one,
+      .div-two {
+        width: auto;
+        margin-top: 20px;
       }
-   </style>
-   <!-- basic -->
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <!-- mobile metas -->
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-   <!-- site metas -->
-   <title>MAIN-INDEX-CONTACT</title>
-   <meta name="keywords" content="">
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <!-- bootstrap css -->
-   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-   <!-- style css -->
-   <link rel="stylesheet" type="text/css" href="css/style.css">
-   <!-- Responsive-->
-   <link rel="stylesheet" href="css/responsive.css">
-   <!-- fevicon -->
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
-   <!-- Scrollbar Custom CSS -->
-   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-   <!-- Tweaks for older IEs-->
-   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   <!-- fonts -->
-   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-   <!-- owl stylesheets -->
-   <link rel="stylesheet" href="css/owl.carousel.min.css">
-   <link rel="stylesheet" href="css/owl.theme.default.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
-      media="screen">
+
+      .home,
+      .About {
+        margin-left: 0;
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+      }
+
+      h2 {
+        text-align: center;
+        margin-left: 0;
+      }
+
+      h1 {
+        text-align: center;
+        font-size: 18px;
+       
+      }
+    }
+  </style>
 </head>
 
+<!-- BODY  -->
+
 <body>
-   <!-- header section start -->
-   <div class="header_section">
-      <div class="header_main">
+  <!-- HOME -->
 
-         <div class="mobile_menu">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="home" href="./index.html">HOME</a>
 
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="watchs.html">Watchs</a>
-                     </li>
+  <br>
+  <br>
+  <br><b>
+    <!-- main-container -->
+    <div class="main-container">
 
-                     <li class="nav-item active">
-                        <a class="nav-link " href="contact.html">Contact</a>
-                     </li>
-                     <li class="nav-item">
-                     </li>
-                  </ul>
-               </div>
-            </nav>
-         </div>
-         <div class="container-fluid">
-            <div class="menu_main">
-               <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="watchs.html">Watchs</a></li>
-
-                  <li class="active"><a href="contact.html">Contact us</a></li>
-               </ul>
-            </div>
-         </div>
+      <!--  DIV ONE -->
+      <div class="div-one">
+        <!-- H2 -->
+        <h2>🔘 My Address</h2>
+        <h1>Katol Dist. Nagpur. India</h1>
       </div>
-   </div>
-   <!-- header section end -->
-   <!-- background bg start -->
-   <div class="background_bg">
-      <!-- contact section start -->
-      <div class="contact_section layout_padding">
-         <div class="container">
-         </div>
-         <div class="contact_section_2">
-            <div class="container-fluid">
-               <div class="row">
-                  <div class="col-md-6">
-                     <div class="mail_section_1">
-                        <div class="location_left">
-                           <div class="call_text"><a href=""><img src="images/map-icon.png"> <span
-                                    style="font-size: xx-large;" class="add">Address : <p>shop no 3, Shopping
-                                       complex, below lic office, Laxmi Nagar, Katol, Maharashtra 441302</p> </span>
-                              </a></div>
+      <div class="div-two">
+        <!-- SOCIAL PROJECT -->
+        <h2> <img src="https://cdn-icons-png.flaticon.com/512/4187/4187272.png" height="25px" width="24px"> Social
+          Profiles </h2>
+        <br>
+        <div class="social-links">
 
-                           <br>
-                        </div>
-                        <div class="mail_section_1">
-                           <div class="location_left">
-
-
-                           </div>
-
-
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-6 padding_right_0">
-                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1401.396743228997!2d78.58398831545814!3d21.270137250762954!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4596265a9cd59%3A0x4b95d0484e4e58b6!2sPrakash%20Radio%20and%20Watch%20Center!5e1!3m2!1sen!2sin!4v1723026188283!5m2!1sen!2sin"
-                        width="570" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-                  </div>
-               </div>
-            </div>
-         </div>
+          <a href="https://github.com/LuckyFullStackDeveloper1/LuckyFullStackDeveloper1" class="twitter"><img
+              src="./Home-image/github.jpeg" style="border-radius: 50%;" height="20px" width="20px">  Github</a>
+          <a href="live:.cid.5f22d3c3cdedd6bc" class="twitter"> <img style="border-radius: 50%;"  src="./Home-image/skype.avif" height="20px" width="20px">  Skype</a>
+          <a href="https://www.linkedin.com/feed/" class="twitter"> <img style="border-radius: 50%;"  src="./Home-image/likdin.png" height="20px" width="20px">  Linkedln</a>
+        </div>
       </div>
-      <!-- contact section end -->
-
-      <h1 style="color: rgb(255, 135, 80); text-align: center; font-size: xx-large;">
-         Official Address
-      </h1>
-
-      <!-- table -->
-
-      <table class="table">
-
-         <tr>
-
-            <td style="color: gold">Flat/Door/Block No.</td>
-            <td style="color: gold">Name of Premises/ Building</td>
-            <td style="color: gold">Village/Town</td>
-         </tr>
-
-
-         <tr>
-
-            <td style="color: azure;">Room No 03</td>
-            <td style="color: azure;">Shopping Center, Nehru Bazar </td>
-            <td style="color: azure;">Katol</td>
-
-         </tr>
-         <tr>
-
-            <td style="color: gold">Block</td>
-            <td style="color: gold">Road/Street/Lane</td>
-            <td style="color: gold">City</td>
-         </tr>
-         <tr>
-
-            <td style="color: azure;">03</td>
-            <td style="color: azure;">Main Road</td>
-            <td style="color: azure;">Katol</td>
-
-         </tr>
-         <tr>
-
-            <td style="color: gold;">State</td>
-            <td style="color: gold;">Pin Code</td>
-
-
-         </tr>
-         <tr>
-
-            <td style="color: azure;">Maharashtra</td>
-            <td style="color: azure;">441302</td>
-
-
-         </tr>
-
-
-      </table>
-   </div>
-   <!-- background bg end -->
-   <!-- footer section start -->
-   <div style="background-color: rgb(255, 81, 0);" class="footer_section layout_padding">
-      <div class="container">
-         <h3 class="follow_text">Follow Now</h3>
-         <div class="social_icon">
-            <ul>
-               <li><a href=""><img src="images/fb-icon.png"></a></li>
-
-               <li><a href="https://www.instagram.com/explore/locations/177530852932870/prakash-radio-and-watch/"><img src="images/instagram-icon.png"></a></li>
-            </ul>
-         </div>
-         <div class="location_main">
-
-
-         </div>
-         <div class="location_right    ">
-            <div class="call_text"><a href="#"><img src="images/call-icon.png"><span class="call_padding">Call :
-                     93722 99450
-                  </span></a></div>
-         </div>
+    </div>
+    <!-- CONTECT  -->
+    <div class="main-container">
+      <div class="div-one">
+        <h2>📞 Contact</h2>
+        <h1> 9226784527</h1>
       </div>
-   </div>
-   </div>
-   <!-- footer section end -->
-   <!-- copyright section start -->
-   <div class="copyright_section">
-      <div class="container">
-
+      <!-- DIV TWO -->
+      <div class="div-two">
+        <h2>📧 Email </h2>
+        <h1>nakadelucky8@gmail.com</h1>
       </div>
-
+    </div>
+    <!-- HTML -->
 </body>
 
 </html>
